now with analytics

--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
   <h1>Why bzr is Better Than X</h1>
   <h2>It's not.</h2>
   <p>Seriously, use git or hg instead.</p>
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-6718462-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </body>
 </html>
